[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
config = "0.14"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
chrono = "0.4.15"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "std"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
once_cell = "1.19.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.11"
serde-aux = "4.5.0"
unicode-segmentation = "1.11.0"
claims = "0.7.1"
validator = "0.18.1"
linkify = "0.10.0"
rand = "0.8.5"
thiserror = "1.0.63"
anyhow = "1.0.88"
base64 = "0.22.1"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.18"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"

[build-dependencies]
syn = { version = "1.0", features = ["parsing"] }
